--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.1.4",
     "axios": "^1.8.4",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
     "chartjs-plugin-datalabels": "^2.2.0",
     "framer-motion": "^11.11.9",
@@ -26,11 +27,13 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "locomotive-scroll": "^4.1.4",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.4.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
