--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.1.4",
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
