--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.1.4",
     "@react-google-maps/api": "^2.20.6",
+    "@stomp/stompjs": "^7.1.1",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
@@ -45,6 +46,7 @@
     "react-to-print": "^3.0.5",
     "react-toastify": "^10.0.6",
     "sneakerfrontend": "file:",
+    "sockjs-client": "^1.6.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.14.3",
     "xlsx": "^0.18.5"
